--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    * and the included README.md file for license terms and conditions.
   -->
 <title> PhoneGap Accelerometer </title>
-<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
 <script type="text/javascript" src="js/handbell.js"></script>
 <link rel=stylesheet href="css/handbell.css" type="text/css">
