--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
  <meta name="Copyright" content="&copy; 2012, Intel Corporation" />
   <!--
-   * Copyright (c) 2012, Intel Corporation, version: 12 October 2012
+   * Copyright (c) 2012, Intel Corporation. All rights reserved.
    * Please see http://software.intel.com/html5/license/samples 
    * and the included README.md file for license terms and conditions.
   -->
